- updated docker and gitlab config to allow SPRING_PROFILE property, which will trigger the load of required environment-specific properties
- updated swagger config to include new controllers

- updated jacoco config plugin to enable unit test coverage for sonar scan