@@ -17,7 +17,7 @@
     <surefire-junit.version>2.6</surefire-junit.version>
     <sonar.projectKey>edu.uwm.capstone:poster-backend</sonar.projectKey>
     <sonar.projectVersion>1.0</sonar.projectVersion>
-    <sonar.jacoco.reportPaths>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPaths>
+    <sonar.jacoco.reportPaths>${project.basedir}/target/jacoco.exec</sonar.jacoco.reportPaths>
     <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
     <sonar.binaries>target/classes</sonar.binaries>
     <sonar.test.binaries>target/test-classes</sonar.test.binaries>
@@ -341,9 +341,6 @@
               </dependency>
             </dependencies>
             <configuration>
-              <argLine>
-                --illegal-access=permit
-              </argLine>
               <includes>
                 <include>**/*UnitTest.java</include>
               </includes>
@@ -368,9 +365,6 @@
               </dependency>
             </dependencies>
             <configuration>
-              <argLine>
-                --illegal-access=permit
-              </argLine>
               <includes>
                 <include>**/*ComponentTest.java</include>
               </includes>
